# ai-dev-team

./: .gitignore  CLAUDE.md  LICENSE  README.md  deploy.json
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
backend/: .env.example  Cargo.toml
backend/config/: playwright-mcp.json
backend/migrations/: 20260316000000_initial_schema.sql  20260317000000_scan_sessions.sql  20260317100000_hearing_flow.sql  20260317200000_sprints.sql  20260318000000_qa_phase.sql  20260319000000_execution_groups.sql  20260319100000_issue_fields.sql  20260319100000_users.sql  20260320000000_auto_merge.sql  20260320000000_improving_phase.sql  20260320000000_revision_flow.sql  20260321000000_definition_of_done.sql  20260322000000_cancel_reason.sql  20260323000000_pending_completion.sql
backend/src/: auth.rs  config.rs  db.rs  error.rs  factrail.rs  github.rs  main.rs  response.rs  ws.rs
backend/src/domains/: mod.rs
backend/src/domains/auth/: handler.rs  model.rs  service.rs
backend/src/domains/executions/: handler.rs  model.rs  service.rs
backend/src/domains/projects/: handler.rs  model.rs  service.rs
backend/src/domains/scans/: handler.rs  model.rs  service.rs
backend/src/domains/sprints/: handler.rs  model.rs  service.rs
backend/src/domains/tasks/: handler.rs  model.rs  service.rs
backend/src/executor/: claude_cli.rs  merger.rs  mod.rs  pipeline.rs  watchdog.rs  worktree.rs
backend/src/scanner/: analyzer.rs
docs/: branch-protection-setup.md  ci-template.yml  deploy-setup.md
frontend/: next.config.ts  package-lock.json  package.json
scripts/: deploy.sh
(+27 files in other folders)
